# Robot-Contorl-Qt-GUI-With-ROS

./: .gitignore  CMakeLists.txt  README.md  SixWheelGUI.pro  backend.cpp  backend.h  main.cpp  package.xml  qml.qrc  qnode.cpp  qnode.h
qml/: SixWheelBotQGUI.qml  SixWheelBotQGUI.qmlproject  SixWheelBotQGUI.qmlproject.qtds  main.qml  main.qmlproject  qtquickcontrols2.conf
qml/fonts/: fonts.txt
qml/imports/DesignerImports/: Constants.qml  DirectoryFontLoader.qml  qmldir
qml/imports/DesignerImports/designer/: plugin.metainfo
qml/imports/QtQuick/Studio/Components/: ArcItem.qml  BorderItem.qml  FlipableItem.qml  GroupItem.qml  IsoItem.qml  PieItem.qml  RectangleItem.qml  SvgPathItem.qml  TriangleItem.qml  qmldir
qml/imports/QtQuick/Studio/Components/designer/: ArcItemSpecifics.qml  BevelSection.qml  BorderItemSpecifics.qml  BorderModeComboBox.qml  CapComboBox.qml  DashPatternEditor.qml  FlipableItemSpecifics.qml  IsoItemSpecifics.qml  MyPlugin.metainfo  PieItemSpecifics.qml  RectangleItemSpecifics.qml  SvgPathItemSpecifics.qml  TriangleItemSpecifics.qml
qml/imports/QtQuick/Studio/Effects/: BlendItem.qml  BrightnessContrastItem.qml  ColorOverlayItem.qml  ColorizeItem.qml  DesaturationItem.qml  DirectionalBlurItem.qml  DisplaceItem.qml  DropShadowItem.qml  FastBlurItem.qml  GammaAdjustItem.qml  GaussianBlurItem.qml  GlowItem.qml  HueSaturationItem.qml  InnerShadowItem.qml  LevelAdjustItem.qml  MaskedBlurItem.qml  OpacityMaskItem.qml  RadialBlurItem.qml  RecursiveBlurItem.qml  RotationItem.qml  ThresholdMaskItem.qml  ZoomBlurItem.qml  qmldir
qml/imports/QtQuick/Studio/Effects/designer/: BlendItemSpecifics.qml  BrightnessContrastItemSpecifics.qml  ColorOverlayItemSpecifics.qml  ColorizeItemSpecifics.qml  DesaturationItemSpecifics.qml  DirectionalBlurItemSpecifics.qml  DisplaceItemSpecifics.qml  DropShadowItemSpecifics.qml  FastBlurItemSpecifics.qml  GammaAdjustItemSpecifics.qml  GaussianBlurItemSpecifics.qml  GlowItemSpecifics.qml  HueSaturationItemSpecifics.qml  InnerShadowItemSpecifics.qml  LevelAdjustItemSpecifics.qml  MaskedBlurItemSpecifics.qml  MyPlugin.metainfo  OpacityMaskItemSpecifics.qml  RadialBlurItemSpecifics.qml  RecursiveBlurItemSpecifics.qml  ThresholdMaskItemSpecifics.qml  ZoomBlurItemSpecifics.qml
qml/imports/SixWheelBotQGUI/: EventListModel.qml  EventListSimulator.qml
